Add session summary and quick start guide for next agent
- QUICK_START.md: Streamlined 5-minute getting started guide
- claude-progress.txt: Detailed session 1 summary with next steps
- Updated .gitignore to track progress files

--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,6 @@ htmlcov/
 # Temporary files
 *.tmp
 *.temp
-claude-progress.txt
+
+# Keep claude-progress.txt for session tracking
+# claude-progress.txt
