--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,24 +3,24 @@ fastapi==0.128.0
 uvicorn[standard]==0.32.1
 python-multipart==0.0.19
 
-# Database
-supabase==2.12.2
+# Database  
+supabase==2.27.0
 psycopg2-binary==2.9.10
 
 # AI/ML
-langchain==1.2.0
-langchain-core==1.2.5
-langchain-openai==1.1.6
-openai==2.14.0
+langchain==0.3.13
+langchain-core==0.3.28
+langchain-openai==0.2.14
+openai==1.59.5
 
 # Authentication
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.1
 
-# Data validation
-pydantic==2.10.5
-pydantic-settings==2.7.1
+# Data validation (use version compatible with realtime)
+pydantic>=2.11.7,<3.0
+pydantic-settings>=2.7.1
 
 # Utilities
 httpx==0.28.1
