--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,25 +11,26 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.469.0",
     "next": "^16.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "zustand": "^5.0.3",
-    "lucide-react": "^0.469.0",
-    "date-fns": "^4.1.0",
     "react-hot-toast": "^2.4.1",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "typescript": "^5",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "^16.1.0",
-    "tailwindcss": "^4.0.0",
     "postcss": "^8",
-    "autoprefixer": "^10.4.20"
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5"
   }
 }
